<resources>
    <string name="app_name">Mile-O-Meter</string>
    <string name="export">Export Log</string>
    <string name="view_log">View Log</string>
    <string name="start_driving">Start Driving!</string>
    <string name="welcome">Welcome to the DMV Driving App!</string>
    <string name="log">45 Hour Log</string>
    <string name="back_text">To go back, hit the button at the bottom of the screen.</string>
    <string name="stop_driving">Stop Driving</string>
    <string name="date">Date</string>
    <string name="session_string">Session/Page Number(s)/Skills</string>
    <string name="total_minutes_driven">Total Minutes Driven</string>
    <string name="total_mileage">Total Mileage</string>
    <string name="night_driving_minutes">Night Driving Minutes</string>
    <string name="signature_string">Parent/Guardian Signature/Comments</string>
    <string name="log_to_home">Back to Home Screen</string>
    <string name="_45_hour_log">45-Hour Log</string>
    <string name="gen_please_wait">Please Wait</string>
    <string name="gen_pdf_file">Creating File...</string>
    <string name="miles">Miles Driven: 0.0</string>
    <string name="map_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDvcdbadOSqNogDo9u77bYZWgHLYJqxKuE</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibGF2bmRyMTAzIiwiYSI6ImNsZWFmYmk5MTBmZm8zdWxlanloNmF1OXAifQ.3-jS8kgahe2hW51pKIrgpg</string>
</resources>